--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,15 @@
 
 <body>
     <main class="main-auth-content">
-        <form class="container form">
+        <form id="registerForm" class="container form">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" aria-describedby="usernameHelp">
+                <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp">
                 <div id="emailHelp" class="form-text">We'll never share your username with anyone else.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password">
+                <input type="password" name="password" class="form-control" id="password">
             </div>
             <button type="submit" class="btn btn-primary" id="submitButton">Submit</button>
         </form>
