--- a/public/home/index.html
+++ b/public/home/index.html
@@ -11,43 +11,12 @@
 </head>
 
 <body>
-    <div class="chat-container">
-        <div class="message">
-            <img src="https://via.placeholder.com/50x50" alt="Perfil" class="profile-image">
-            <div class="message-content">
-                <span class="username">ANTONIO MARGHERITI</span>
-                <span class="message-text">Bem-vindo (ou vinda), ANTONIO MARGHERITI. Tem pizza aí?</span>
-                <span class="timestamp">Hoje às 15:06</span>
-            </div>
+    <div class="align-content">
+        <div class="chat-container" id="chat-container">
         </div>
-        <div class="message">
-            <img src="https://via.placeholder.com/50x50" alt="Perfil" class="profile-image">
-            <div class="message-content">
-                <span class="username"> Felipe</span>
-                <span class="message-text">Que bom que você chegou, Felipe.</span>
-                <span class="timestamp">Hoje às 15:06</span>
-            </div>
-        </div>
-        <div class="message">
-            <img src="https://via.placeholder.com/50x50" alt="Perfil" class="profile-image">
-            <div class="message-content">
-                <span class="username">ANTONIO MARGHERITI</span>
-                <span class="message-text">voltou nada</span>
-                <span class="timestamp">Hoje às 15:09</span>
-            </div>
-        </div>
-        <div class="message">
-            <img src="https://via.placeholder.com/50x50" alt="Perfil" class="profile-image">
-            <div class="message-content">
-                <span class="username">Emerson dos Santos</span>
-                <span class="message-text">acabou de aterrissar.</span>
-                <span class="timestamp">Hoje às 15:10</span>
-            </div>
-        </div>
-
-        <form class="message-form">
-            <input type="text" placeholder="Digite sua mensagem..." class="message-input">
-            <button type="submit" class="message-submit">Enviar</button>
+        <form class="message-form" id="form-message">
+            <input type="text" placeholder="Digite sua mensagem..." name="message" class="message-input">
+            <button type="submit" class="message-submit" id="btn-send">Enviar</button>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
