--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,20 @@
         <form id="registerForm" class="container form">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp">
-                <div id="emailHelp" class="form-text">We'll never share your username with anyone else.</div>
+                <input type="text" class="form-control" id="username" name="username"
+                    aria-describedby="usernameHelp" required>
+                <div id="emailHelp" class="form-text ">We'll never share your username with anyone else.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" name="password" class="form-control" id="password">
+                <input type="password" name="password" class="form-control" id="password" required>
             </div>
             <button type="submit" class="btn btn-primary" id="submitButton">Submit</button>
         </form>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="./assets/scripts/main.js"></script>
 </body>
 
