Update styling in style.css, main.js, and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
         <form id="registerForm" class="container form">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username"
-                    aria-describedby="usernameHelp" required>
+                <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp"
+                    required>
                 <div id="emailHelp" class="form-text ">We'll never share your username with anyone else.</div>
             </div>
             <div class="mb-3">
