--- a/public/home/index.html
+++ b/public/home/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" ng-app="FeedbackLoopHome">
 
 <head>
     <meta charset="UTF-8">
@@ -8,15 +8,30 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 </head>
 
-<body>
+<body ng-controller="HomeController">
     <div class="align-content">
-        <div class="chat-container" id="chat-container">
+        <div class="chat-container" id="chat-container" ng-model="chat-container">
+            <div class="message" ng-repeat="message in data">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="profile-image" viewBox="0 0 24 24"
+                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-user-round">
+                    <circle cx="12" cy="8" r="5" />
+                    <path d="M20 21a8 8 0 0 0-16 0" />
+                </svg>
+                <div class="message-content">
+                    <span class="username">{{message.author.username}}</span>
+                    <span class="message-text">{{message.text}}</span>
+                    <span class="timestamp">{{ message.createdAt | date:'short' }}</span>
+                </div>
+            </div>
         </div>
         <form class="message-form" id="form-message">
-            <input type="text" placeholder="Digite sua mensagem..." name="message" class="message-input">
-            <button type="submit" class="message-submit" id="btn-send">Enviar</button>
+            <input type="text" placeholder="Digite sua mensagem..." name="message" class="message-input"
+                ng-model="message">
+            <button type="submit" class="message-submit" id="btn-send" ng-click="submit()">Enviar</button>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
