Refactor form submission handling and chat rendering in main.js

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -13,7 +13,7 @@
 
 <body ng-controller="HomeController">
     <div class="align-content">
-        <div class="chat-container" id="chat-container" ng-model="chat-container">
+        <div class="chat-container" id="chat-container" ng-model="chatContainer">
             <div class="message" ng-repeat="message in data">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="profile-image" viewBox="0 0 24 24"
                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
