--- a/public/home/index.html
+++ b/public/home/index.html
@@ -2,18 +2,19 @@
 <html lang="pt-br" ng-app="FeedbackLoopHome">
 
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+
 </head>
 
 <body ng-controller="HomeController">
     <div class="align-content">
-        <div class="chat-container" id="chat-container" ng-model="chatContainer">
+        <div class="chat-container" id="chatContainer" ng-model="chatContent">
             <div class="message" ng-repeat="message in data">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="profile-image" viewBox="0 0 24 24"
                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -21,10 +22,19 @@
                     <circle cx="12" cy="8" r="5" />
                     <path d="M20 21a8 8 0 0 0-16 0" />
                 </svg>
-                <div class="message-content">
-                    <span class="username">{{message.author.username}}</span>
-                    <span class="message-text">{{message.text}}</span>
-                    <span class="timestamp">{{ message.createdAt | date:'short' }}</span>
+                <div class="align-message">
+                    <div class="message-content">
+                        <span class="username">{{message.author.username}}</span>
+                        <span class="message-text">{{message.text}}</span>
+                        <span class="timestamp">{{ message.createdAt | date:'short' }}</span>
+                    </div>
+                    <div class="delete-content" ng-click="deleteMessage(message.id)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-x" viewBox="0 0 16 16">
+                            <path
+                                d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+                        </svg>
+                    </div>
                 </div>
             </div>
         </div>
